feat(style): added tailwind integration

--- a/view/layout/base/base.templ
+++ b/view/layout/base/base.templ
@@ -5,6 +5,7 @@ templ Layout() {
 	<html>
 		<head>
 			<title>time</title>
+			<link rel="stylesheet" href="/public/css/styles.css"/>
 		</head>
 		<body>
 			{ children... }
