--- a/view/page/home/home.templ
+++ b/view/page/home/home.templ
@@ -4,6 +4,6 @@ import "github.com/fissilejonathan/time/view/layout/base"
 
 templ Page(name *string) {
 	@base.Layout() {
-		<div>Hello, { *name }</div>
+		<div class="text-red-900">Hello, { *name }</div>
 	}
 }
