style: added favicon

--- a/view/layout/base/base.templ
+++ b/view/layout/base/base.templ
@@ -6,6 +6,7 @@ templ Layout() {
 		<head>
 			<title>time</title>
 			<link rel="stylesheet" href="/public/css/styles.css"/>
+			<link rel="icon" type="image/x-icon" href="/public/favicon.png"/>
 		</head>
 		<body>
 			{ children... }
