build: renamed scripts folder

--- a/view/layout/base/base.templ
+++ b/view/layout/base/base.templ
@@ -9,7 +9,7 @@ templ Layout() {
 			<title>time</title>
 			<link rel="stylesheet" href="/public/css/styles.css"/>
 			<link rel="icon" type="image/x-icon" href="/public/favicon.png"/>
-			<script src="/public/scripts/htmx.min.js"></script>
+			<script src="/public/script/htmx.min.js"></script>
 		</head>
 		<body class="bg-primary p-5">
 			@navbar.Layout()
