refactor: moved layout folder into page

--- a/view/page/home/home.templ
+++ b/view/page/home/home.templ
@@ -1,9 +1,9 @@
 package home
 
-import "github.com/fissilejonathan/time/view/layout/base"
+import "github.com/fissilejonathan/time/view/page/layout/base"
 
 templ Page(name *string) {
 	@base.Layout() {
-		<div class="text-red-700">Hello, { *name }</div>
+		<div></div>
 	}
 }
